# gslide2media

./: .gitignore  GoogleAPIConfig.md  README.md  pyproject.toml
src/gslide2media/: __init__.py  __main__.py  cli.py  config.py  drive.py  file.py  image.py  meta.py  options.py  presentation.py  screen.py  slide.py  to_media.py  utils.py
src/gslide2media/cli/: __init__.py  cli.py  modifiers.py  validators.py
src/gslide2media/cli/commands/: __init__.py  interactive.py  options_history.py
src/gslide2media/cli/commands/auth/: __init__.py  import_client_secret.py
src/gslide2media/cli/tools/: __init__.py  google_api_project.py  import_client_secret.py  options_history.py
src/gslide2media/cli_tools/: google_api_project.py
src/gslide2media/enums/: __init__.py  drive_types.py  export_formats.py  options.py  screens.py
src/gslide2media/google/: __init__.py  auth.py  google_client.py
src/gslide2media/models/: __init__.py  drive.py  file.py  image.py  presentation.py  slide.py
src/gslide2media/tools/: google_api_project.py
src/gslide2media/utils/: __init__.py  images.py  utils.py  video.py
tests/gslide2media/: test_config.py  test_gslide2media.py  test_options.py
tests/gslide2media/google/: test_auth.py
